# py-ref-model

./: .gitignore  README.md  intro.ipynb  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst
files/: aegis_rules.json
src/: aegis_pipeline.py  bloom_filter.py  common.py  cuckoo_hash.py  main.py  test_data_gen.py
