[project]
name = "py-ref-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
]

[dependency-groups]
docs = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "sphinx-autodoc-typehints>=3.11.0",
]
